# SOCMetric

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
docs/: FIX_PROMPT.md  limitations.md  metric-mapping.md  page-layouts.md  resource-schemas.md
pages/: soc-calendar.json  soc-capacity.json  soc-context-ledger.json  soc-dashboard-home.json  soc-flow.json  soc-patterns.json  soc-projections.json  soc-response-speed.json  soc-setup.json  soc-watch-status.json
resources/: soc_metrics_cache.seed.json  soc_settings.seed.json  soc_tickets_cache.seed.json  soc_tines_api.seed.json
src/: App.tsx  constants.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  error.rs  main.rs
src-tauri/src/jira/: client.rs  commands.rs  discovery.rs  mod.rs
src-tauri/src/models/: credential.rs  mod.rs  settings.rs  ticket.rs
src-tauri/src/storage/: commands.rs  db.rs  keyring_store.rs  mod.rs  queries.rs  schema.rs
src-tauri/src/sync/: commands.rs  engine.rs
stories/: soc-annotations-crud.json  soc-compute-all-metrics.json  soc-compute-calendar-view.json  soc-compute-capacity-shift.json  soc-compute-flow-lead-time.json  soc-compute-headline.json  soc-compute-patterns-recurrence.json  soc-compute-projections.json  soc-compute-response-speed.json  soc-compute.json  soc-data.json  soc-jira-discover-projects.json  soc-jira-discover-statuses.json  soc-jira-sync.json  (+4 more)
(+138 files in other folders)
